feat: enable resume download links (assets/Dhrumil_Thakar_Resume.pdf)

--- a/index.html
+++ b/index.html
@@ -39,18 +39,15 @@
                 <!-- Left Content -->
                 <div class="hero-content">
                     <div class="hero-tagline">Hi, I'm Dhrumil Thakar</div>
-                    <h1 class="hero-title">I build Android apps and cloud systems that scale.</h1>
+                    <h1 class="hero-title">I specialize in developing robust Android apps.</h1>
                     <p class="hero-subtitle">
-                        Specialized in building robust Android applications with Kotlin and Jetpack, 
-                        paired with scalable cloud architectures on AWS and GCP. I design end-to-end 
-                        systems, implement CI/CD pipelines, and focus on clean architecture principles 
-                        to create software that performs, scales, and lasts.
+                        I am currently learning AWS and cloud fundamentals to build applications that are secure, scalable, and ready for real-world deployment.
                     </p>
 
                     <!-- CTA Buttons -->
                     <div class="hero-buttons">
                         <a href="#projects" class="btn btn-primary">View Projects</a>
-                        <a href="#" class="btn btn-secondary">Download Resume</a>
+                        <a href="assets/Dhrumil_Thakar_Resume.pdf" download class="btn btn-secondary">Download Resume</a>
                     </div>
                 </div>
 
@@ -553,7 +550,7 @@
 
                         <!-- Resume Download -->
                         <div class="resume-section">
-                            <a href="#" class="btn btn-secondary">Download Resume</a>
+                            <a href="assets/Dhrumil_Thakar_Resume.pdf" download class="btn btn-secondary">Download Resume</a>
                         </div>
                     </div>
                 </div>
