fix: navbar light theme styling and add avatar to navbar logo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="navbar-container">
             <!-- Logo -->
             <div class="navbar-logo">
+                <img src="assets/avatar-400.jpg" alt="Dhrumil" class="navbar-logo-img">
                 <span class="logo-text">DT</span>
             </div>
 
